# OpenCV

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  output1.avi
